--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
 @import url('https://fonts.googleapis.com/css?family=Alegreya:400i&display=swap&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:300,400&display=swap&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans:300,400&display=swap&subset=cyrillic');
 @font-face {
 	font-family: 'Helvetica Neue Cyr Roman';
 	src: url('/assets/fonts/HelveticaNeueCyr-Roman.eot');
@@ -104,15 +106,15 @@
 /* Type */
 
 	body, input, select, textarea {
-		color: #3e3e3e;
-		font-family: 'Helvetica Neue Cyr Roman', Arial, sans-serif;
+		color: #424244;
+		font-family: 'Fira Sans', Arial, sans-serif;
 		font-size: 16px;
-		font-weight: 300;
+		font-weight: 400;
 		line-height: 1.65em;
 	}
 
 	a {
-		color: #3e3e3e;
+		color: #424244;
 		text-decoration: none;
 		transition: opacity 0.2s ease-in-out;
 	}
@@ -126,7 +128,6 @@
 		}
 
 	strong, b {
-		color: #555;
 		font-weight: bold;
 	}
 
@@ -974,13 +975,13 @@
 
 /* Wrapper (main) */
 
-	#sidebar + #wrapper {
+	#nav + #wrapper {
 		margin-left: 18em;
 	}
 
 		@media screen and (max-width: 980px) {
 
-			#sidebar + #wrapper {
+			#nav + #wrapper {
 				margin-left: 0;
 				padding-top: 3.5em;
 			}
@@ -989,25 +990,25 @@
 
 		@media screen and (max-width: 736px) {
 
-			#sidebar + #wrapper {
+			#nav + #wrapper {
 				padding-top: 0;
 			}
 
 		}
 
-	#header + #wrapper > .wrapper > .inner {
+	#nav + #wrapper > .wrapper > .inner {
 		margin: 0 auto;
 	}
 	
 /* Footer */
 
-	#sidebar + #wrapper + #footer {
+	#nav + #wrapper + #footer {
 		margin-left: 18em;
 	}
 
 		@media screen and (max-width: 980px) {
 
-			#sidebar + #wrapper + #footer {
+			#nav + #wrapper + #footer {
 				margin-left: 0;
 			}
 
@@ -1030,70 +1031,13 @@
 		margin: 0 auto;
 	}
 
-/* Sidebar */
-
-	#sidebar {
-		background: #f5f5f5;
-		cursor: default;
-		height: 100vh;
-		left: 0;
-		overflow-x: hidden;
-		overflow-y: auto;
-		position: fixed;
-		text-align: right;
-		top: 0;
-		width: 18em;
-		z-index: 10000;
-	}
-
-		#sidebar > .inner {
-			display: -moz-flex;
-			display: -webkit-flex;
-			display: -ms-flex;
-			display: flex;
-			-moz-flex-direction: column;
-			-webkit-flex-direction: column;
-			-ms-flex-direction: column;
-			flex-direction: column;
-			-moz-justify-content: center;
-			-webkit-justify-content: center;
-			-ms-justify-content: center;
-			justify-content: space-between;
-			min-height: 100%;
-			width: 100%;
-		}
-
-	@media screen and (max-width: 980px) {
-
-		#sidebar {
-			display: none;
-		}
-
-	}
-
 /* Header */
 		
 	header.mobile {
 		display:none;
 	}
 	
-	header.main {
-		height: 6em;
-		line-height: 2em;
-		display: flex;
-		justify-content: space-evenly;
-		padding:0 5%;
-		width: 100% !important;
-		background:#f5f5f5;
-		flex-direction: column;
-		align-items: flex-end;
-	}
-	
 	@media screen and (max-width: 980px) {
-		
-		header.main {
-			display:none;
-		}
 		
 		header.mobile {
 			position: fixed;
@@ -1148,16 +1092,12 @@
 
 
 	#nav {
-		-webkit-transform: translateX(-25em);
-		-ms-transform: translateX(-25em);
-		transform: translateX(-25em);
 		-webkit-transition: -webkit-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
 		-webkit-transition: box-shadow 0.5s ease, visibility 0.5s, -webkit-transform 0.5s ease;
 		transition: box-shadow 0.5s ease, visibility 0.5s, -webkit-transform 0.5s ease;
 		transition: transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
 		transition: transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s, -webkit-transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #fff;
 		box-shadow: none;
 		height: 100%;
 		max-width: 90%;
@@ -1165,14 +1105,21 @@
 		position: fixed;
 		left: 0;
 		top: 0;
-		visibility: hidden;
-		width: 25em;
+		bottom:0;
+		width: 18em;
 		z-index: 10003;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		justify-content: center;
+		justify-content: space-between;
+		text-align:center;
 	}
+		
+		#nav .logo {
+			font-size: 200%;
+			line-height: 3em;
+			text-decoration: underline;
+		}
 		
 		#nav  ul {
 			margin: 0 0 1em 0;
@@ -1209,7 +1156,7 @@
 			border: 0;
 			color: #3e3e3e;
 			cursor: pointer;
-			display: block;
+			display: none;
 			height: 3em;
 			position: absolute;
 			right: 0;
@@ -1246,6 +1193,26 @@
 				        transform: rotate(-45deg);
 			}
 
+			@media screen and (max-width: 980px) {
+
+				#nav {
+					-webkit-transform: translateX(-25em);
+					-ms-transform: translateX(-25em);
+					transform: translateX(-25em);
+					padding-top: 8em;
+				}
+				
+				#nav .close {
+					display: block;
+					height: 4em;
+				}
+				
+				#nav .logo {
+					display: none;
+				}
+
+			}
+			
 			@media screen and (max-width: 736px) {
 
 				#nav .close {
@@ -1270,81 +1237,17 @@
 			visibility: visible;
 		}
 
-		@media screen and (max-width: 736px) {
 
-		}
+/* Items */
 
-/* Banner */
-
-	#banner {
-		padding: 8em 0 6em 0;
-		background: #f6f6f6;
-		text-align: center;
+	.items {
+		display: flex;
+		flex-wrap: wrap;
 	}
-
-		#banner h2 {
-			font-size: 4em;
-			line-height: 1em;
-			margin: 0 0 0.5em 0;
-			padding: 0;
-		}
-
-		#banner p {
-			font-size: 1.5em;
-			margin-bottom: 1.75em;
-		}
-
-		@media screen and (max-width: 1680px) {
-
-			#banner {
-				padding: 7em 0 5em 0;
-			}
-
-		}
-
-		@media screen and (max-width: 1280px) {
-
-			#banner {
-				padding: 5em 0 3em 0;
-			}
-
-				#banner h2 {
-					font-size: 3.5em;
-				}
-
-		}
-
-		@media screen and (max-width: 980px) {
-
-			#banner {
-				padding: 6em 2em 4em 2em;
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			#banner {
-				padding: 4em 2em 2em 2em;
-			}
-
-				#banner h2 {
-					font-size: 2.25em;
-				}
-
-				#banner p {
-					font-size: 1.25em;
-				}
-
-		}
-
-		@media screen and (max-width: 480px) {
-
-			#banner {
-				padding: 4em 2em 2em 2em;
-			}
-
-		}
+	
+	.item {
+		max-width:25%;
+	}
 
 /* Main */
 
