--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,14 +62,6 @@
 		box-sizing: border-box;
 	}
 
-/* Containers */
-
-	.container {
-		margin-left: auto;
-		margin-right: auto;
-	}
-
-
 /* Basic */
 
 	@-ms-viewport {
@@ -89,7 +81,7 @@
 	}
 
 	body {
-		background: #fff;
+		background: #f3f3f3;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -177,9 +169,9 @@
 	}
 
 	sup {
-		font-size: 0.8em;
+		font-size: 0.7em;
 		position: relative;
-		top: -0.5em;
+		top: -0.4em;
 	}
 
 	blockquote {
@@ -518,7 +510,6 @@
 
 		.image.fit {
 			display: block;
-			margin: 0 0 2em 0;
 			width: 100%;
 		}
 
@@ -976,25 +967,20 @@
 /* Wrapper (main) */
 
 	#nav + #wrapper {
-		margin-left: 18em;
+		margin: 0 18em;
+		padding-top: 6em;
 	}
 
 		@media screen and (max-width: 980px) {
 
 			#nav + #wrapper {
-				margin-left: 0;
-				padding-top: 3.5em;
+				margin: 0;
+				padding-top: 4em;
 			}
 
 		}
 
-		@media screen and (max-width: 736px) {
-
-			#nav + #wrapper {
-				padding-top: 0;
-			}
-
-		}
+		
 
 	#nav + #wrapper > .wrapper > .inner {
 		margin: 0 auto;
@@ -1042,9 +1028,9 @@
 		header.mobile {
 			position: fixed;
 			top:0;
-			background: #fff;
-			height: 6em;
-			line-height: 6em;
+			background: #f3f3f3;
+			height: 4em;
+			line-height: 4em;
 			z-index: 10001;
 			display: flex;
 			justify-content: space-around;
@@ -1068,6 +1054,7 @@
 				
 				header.mobile > a.logo {
 					margin: auto;
+					text-decoration: underline;
 				}
 				
 				header.mobile > a.phone {
@@ -1077,14 +1064,9 @@
 
 	@media screen and (max-width: 480px) {
 
-		header.mobile {
-			height: 4em;
-			line-height: 4em;
+		header.mobile > a {
+			font-size: 1.5em;
 		}
-		
-			header.mobile > a {
-				font-size: 1.5em;
-			}
 		
 	}
 
@@ -1113,6 +1095,7 @@
 		align-items: center;
 		justify-content: space-between;
 		text-align:center;
+		background: #f3f3f3;
 	}
 		
 		#nav .logo {
@@ -1128,23 +1111,27 @@
 			#nav  ul.links {
 				list-style: none;
 				padding: 0;
-				text-align: center;
-				letter-spacing: 0.2em;
+				text-align: left;
 			}
 
 				#nav  ul.links > li {
 					padding: 0;
-					text-transform: uppercase;
-					font-weight: 500;
-					-webkit-transition: all 0.6s ease-in-out;
-					transition: all 0.6s ease-in-out;
+					font-weight: 300;
+					font-size: 1.1em;
+					
 				}
 					
 					#nav  ul.links > li > a {
 						border: 0;
 						display: block;
-						line-height: 3.5em;
+						line-height: 2em;
+						-webkit-transition: all 0.6s ease-in-out;
+						transition: all 0.6s ease-in-out;
 					}
+					
+						#nav  ul.links > li > a:hover {
+							text-decoration: underline;
+						}
 
 					
 					
@@ -1213,20 +1200,15 @@
 
 			}
 			
-			@media screen and (max-width: 736px) {
-
-				#nav .close {
-					height: 4em;
-				}
-
-			}
-			
 			@media screen and (max-width: 480px) {
 				
 				#nav {
-					font-size: 90%;
+					width: 80%;
 				}
 				
+					#nav .close {
+						top: 0;
+					}
 			}
 
 		#nav.visible {
@@ -1243,25 +1225,87 @@
 	.items {
 		display: flex;
 		flex-wrap: wrap;
+		margin: -5px -5px;
 	}
 	
 	.item {
-		max-width:25%;
+		width: calc(1/4*100% - 10px);
+		margin: 5px;
+	}
+	
+		@media screen and (max-width: 1680px) {
+			
+			.item {
+				width: calc(1/3*100% - 10px);
+			}
+			
+		}
+		
+		@media screen and (max-width: 1280px) {
+			
+			.item {
+				width: calc(1/2*100% - 10px);
+			}
+			
+		}
+		
+		@media screen and (max-width: 980px) {
+			
+			.item {
+				width: calc(1/3*100% - 10px);
+			}
+			
+		}
+		
+		@media screen and (max-width: 736px) {
+			
+			.item {
+				width: calc(1/2*100% - 10px);
+			}
+			
+		}
+		
+		@media screen and (max-width: 480px) {
+			
+			.item {
+				width: calc(100% - 10px);
+			}
+			
+		}
+
+/* Containers */
+
+	.container {
+		margin-left: auto;
+		margin-right: auto;
+	}
+	
+	@media screen and (max-width: 980px) {
+		.container {
+			width: 90%;
+		}
 	}
 
 /* Main */
 
-	#main {
-		padding: 4em 0 2em 0;
+	.main-header {
+		font-size: 200%;
+		line-height: 3em;
+		margin-bottom: 1em;
 	}
-
-		@media screen and (max-width: 736px) {
-
-			#main {
-				padding: 3em 0 1em 0;
-			}
-
+	
+		.main-header h1{
+			font-weight: 300;
+			margin: 0;
 		}
+	
+	@media screen and (max-width: 980px) {
+			
+		.main-header {
+			margin-top: 0.5em;
+		}
+		
+	}
 
 /* Footer */
 
