--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -964,10 +964,23 @@
 
 		}
 
+/* Items */
+
+	.items {
+		display: grid;
+		grid: auto-flow / repeat(auto-fill, minmax(320px, 1fr));
+		grid-gap: 5px;
+	}
+	
+	.item {
+		
+	}
+
 /* Wrapper (main) */
 
 	#nav + #wrapper {
 		margin: 0 18em;
+		margin-right: 10%;
 		padding-top: 6em;
 	}
 
@@ -1220,58 +1233,9 @@
 		}
 
 
-/* Items */
 
-	.items {
-		display: flex;
-		flex-wrap: wrap;
-		margin: -5px -5px;
-	}
 	
-	.item {
-		width: calc(1/4*100% - 10px);
-		margin: 5px;
-	}
 	
-		@media screen and (max-width: 1680px) {
-			
-			.item {
-				width: calc(1/3*100% - 10px);
-			}
-			
-		}
-		
-		@media screen and (max-width: 1280px) {
-			
-			.item {
-				width: calc(1/2*100% - 10px);
-			}
-			
-		}
-		
-		@media screen and (max-width: 980px) {
-			
-			.item {
-				width: calc(1/3*100% - 10px);
-			}
-			
-		}
-		
-		@media screen and (max-width: 736px) {
-			
-			.item {
-				width: calc(1/2*100% - 10px);
-			}
-			
-		}
-		
-		@media screen and (max-width: 480px) {
-			
-			.item {
-				width: calc(100% - 10px);
-			}
-			
-		}
 
 /* Containers */
 
