--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,7 +120,7 @@
 		}
 
 	strong, b {
-		font-weight: bold;
+		font-weight: 400;
 	}
 
 	em, i {
@@ -143,7 +143,7 @@
 		}
 
 	h2 {
-		font-size: 2em;
+		font-size: 1.75em;
 	}
 
 	h3 {
@@ -974,13 +974,108 @@
 		grid-auto-flow: dense;
 	}
 	
+		@media screen and (max-width: 980px) {
+			
+			.items {
+				grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+			}
+		}
+		
 	.item {
+		position: relative;
+		background: #000;
 		
 	}
 	
 	.item.big {
 		grid-column-start: span 2;
 		grid-row-start: span 2;
+	}
+	
+		.item > a img{
+			transition: all .2s ease-in-out;
+		}
+		
+		.item .caption {
+			position: absolute;
+			top: 20px;
+			left: 20px;
+			bottom: 20px;
+			right: 20px;
+			color: #f3f3f3;
+			transition: all .2s ease-in-out;
+			opacity: 0;
+		}
+		
+			.item:hover .caption {
+				opacity: 1;
+			}
+			
+			.item .caption h2{
+				font-weight: 300;
+				font-size: 1.25em;
+				margin-bottom: 0.5em;
+			}
+			
+			.item .caption p{
+				font-weight: 300;
+				font-size: 1.2em;
+			}
+		
+		.item > a:hover {
+			opacity: 1;
+		}
+		
+			.item > a:hover img {
+				opacity: 0.5;
+			}
+			
+		@media screen and (max-width: 980px) {
+			
+			.item .caption {
+				opacity: 1;
+			}
+		}
+		
+		@media screen and (max-width: 480px) {
+			
+			.item .caption {
+				font-size: 80%;
+			}
+		}
+		
+/* Product */
+
+	.product {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 2em;
+		font-weight: 300;
+	}
+	
+	@media screen and (max-width: 780px) {
+		
+		.product {
+			grid-template-columns: 1fr;
+		}
+		
+	}
+	
+/* Photos */
+
+	.photos {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 2em;
+		font-weight: 300;
+	}
+	
+	@media screen and (max-width: 780px) {
+		
+		.photos {
+			grid-template-columns: 1fr;
+		}
+		
 	}
 
 /* Wrapper (main) */
@@ -1010,12 +1105,13 @@
 
 	#nav + #wrapper + #footer {
 		margin-left: 18em;
+		margin-right: 10%;
 	}
 
 		@media screen and (max-width: 980px) {
 
 			#nav + #wrapper + #footer {
-				margin-left: 0;
+				margin: 0;
 			}
 
 		}
@@ -1164,6 +1260,17 @@
 						#nav  ul.links > li > a:hover {
 							text-decoration: underline;
 						}
+						
+					@media screen and (max-width: 480px) {
+						
+						#nav  ul.links {
+							text-align: center;
+						}
+						
+						#nav  ul.links > li.sub-cat {
+							padding-left: 0;
+						}
+					}
 
 					
 					
@@ -1251,7 +1358,10 @@
 			visibility: visible;
 		}
 
-
+		#nav .phone {
+			display: block;
+			margin-bottom: 1em;
+		}
 
 	
 	
@@ -1288,14 +1398,32 @@
 			margin-top: 0.5em;
 		}
 		
+			.main-header h1{
+				line-height: 1.25em;
+				font-size: 0.8em;
+			}
+		
 	}
 
 /* Footer */
 
 	#footer {
 		padding: 4em 0 2em 0;
-		background: #f2f2f2;
+		background: #f3f3f3;
+		text-align: right;
+		font-size: 0.9em;
 	}
+	
+		@media screen and (max-width: 980px) {
+			
+			#footer {
+				text-align: center;
+			}
+		}
+	
+		#footer h2{
+			text-decoration: underline;
+		}
 
 		#footer .copyright {
 			color: #bbb;
