--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1000,10 +1000,11 @@
 		
 		.item .caption {
 			position: absolute;
-			top: 20px;
-			left: 20px;
-			bottom: 20px;
-			right: 20px;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			padding: 20px;
 			color: #f3f3f3;
 			transition: all .2s ease-in-out;
 			opacity: 0;
@@ -1036,6 +1037,7 @@
 			
 			.item .caption {
 				opacity: 1;
+				background: linear-gradient(180deg, rgba(0,0,0,0.6), transparent 50%)
 			}
 		}
 		
@@ -1066,6 +1068,18 @@
 			.product img {
 				width: 100% !important;
 				max-height: none;
+			}
+		}
+		
+		@media screen and (max-width: 480px) {
+			
+			.product img {
+				position: relative;
+				width: 100vw !important;
+				left: 50%;
+				margin-left: -50vw;
+				max-width: 100vw;
+				
 			}
 		}
 	
