--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1008,6 +1008,7 @@
 			color: #f3f3f3;
 			transition: all .2s ease-in-out;
 			opacity: 0;
+			background: linear-gradient(180deg, rgba(0,0,0,0.6), transparent 50%);
 		}
 		
 			.item:hover .caption {
@@ -1029,15 +1030,12 @@
 			opacity: 1;
 		}
 		
-			.item > a:hover img {
-				opacity: 0.5;
-			}
 			
 		@media screen and (max-width: 980px) {
 			
 			.item .caption {
 				opacity: 1;
-				background: linear-gradient(180deg, rgba(0,0,0,0.6), transparent 50%)
+				
 			}
 		}
 		
