--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="mobile">
-	<a href="#nav"><img src="images/menu.svg" alt="Меню"/></a>
+	<a href="#nav"><img src="/images/menu.svg" alt="Меню"/></a>
 	<a href="/" class="logo">Вещи</a>
-	<a href="tel:+74951234567" class="phone"><img src="images/phone.svg" alt="Телефон"/></a>
+	<a href="tel:+74951234567" class="phone"><img src="/images/phone.svg" alt="Телефон"/></a>
 </header>
