--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,15 +1,15 @@
 <nav id="nav">
 	<a href="/" class="logo">Вещи</a>
 	<ul class="links">
-		<li><a href="#">Все товары /</a></li>
-		<li class="sub-cat"><a href="#">Текстиль</a></li>
-		<li class="sub-cat current"><a href="#">Керамика</a></li>
-		<li class="sub-cat"><a href="#">Вещи</a></li>
-		<li class="sub-cat"><a href="#">Свет</a></li>
-		<li class="sub-cat"><a href="#">Мебель</a></li>
-		<li class="gap"><a href="#">Истории</a></li>
-		<li><a href="#">Доставка</a></li>
-		<li><a href="#">Контакты</a></li>
+		<li{% if page.url contains "/catalog/" %} class="current"{% endif %}><a href="/catalog/">Все товары /</a></li>
+		<li class="sub-cat {% if page.url contains "/tekstil/" %}current{% endif %}"><a href="/tekstil/">Текстиль</a></li>
+		<li class="sub-cat {% if page.url contains "/keramika/" %}current{% endif %}"><a href="/keramika/">Керамика</a></li>
+		<li class="sub-cat {% if page.url contains "/veshi/" %}current{% endif %}"><a href="/veshi/">Вещи</a></li>
+		<li class="sub-cat {% if page.url contains "/svet/" %}current{% endif %}"><a href="/svet/">Свет</a></li>
+		<li class="sub-cat {% if page.url contains "/mebel/" %}current{% endif %}"><a href="/mebel/">Мебель</a></li>
+		<li class="gap {% if page.url contains "/stories/" %}current{% endif %}"><a href="/stories/">Истории</a></li>
+		<li{% if page.url contains "/dostavka" %} class="current"{% endif %}><a href="/dostavka">Доставка</a></li>
+		<li{% if page.url contains "/contact" %} class="current"{% endif %}><a href="/contact">Контакты</a></li>
 	</ul>
 	<div>
 		
