--- a/_layouts/generic.html
+++ b/_layouts/generic.html
@@ -11,7 +11,7 @@
 			<article>
 				<div class="container">
 					<header class="main-header">
-						<h1>Дизайнерский радиатор copperi vertebra</h1>
+						<h1>{{page.page-title}}</h1>
 					</header>
 					{{content}}
 				</div>
