--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,6 +8,9 @@
 		{% include nav.html %}
 		<!-- Main -->
 		<div id="banner">
+			<div class="inner">
+				<h1>Вдохновляющий загаловок</h1>
+			</div>
 		</div>
 		<div id="wrapper">
 			<article>
