--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,7 +9,7 @@
 		<!-- Main -->
 		<div id="banner">
 			<div class="inner">
-				<h1>Вдохновляющий загаловок</h1>
+				<h1>Мебель и предметы интерьера с историей</h1>
 			</div>
 		</div>
 		<div id="wrapper">
