--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1144,17 +1144,24 @@
 		background-position: center;
 		background-size: cover;
 		background-attachment: fixed;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		text-align: center;
 	}
 	
-		#banner::after {
+		#banner::before {
 			content: "";
 			position: absolute;
 			top: 0;
 			left: 0;
 			height: 100%;
 			width: 100%;
-			background: #efefee;
-			opacity: 0.5;
+			background: rgba(239, 239, 238, 0.6);
+		}
+		
+		#banner .inner {
+			z-index: 2;
 		}
 		
 		@media screen and (max-width: 980px) {
