--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
 	<div class="container">
 		<h2 class="logo">Вещи</h2>
 		<ul class="alt">
-			<li><i class="fa fa-phone">&nbsp;</i><a href="tel:+7(495)123-45-67"><span itemprop="telephone">+7&nbsp;(495)&nbsp;123-45-67</span></a></li>
-			<li><i class="fa fa-whatsapp">&nbsp;</i><a href="https://wa.me/74951234567"><span>Написать в WhatsApp</span></a></li>
-			<li><i class="fa fa-envelope-o">&nbsp;</i><a href="mailto:info@veshi.ru"><span itemprop="email">info@veshi.ru</span></a></li>
-			<li><div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fa fa-map-marker">&nbsp;</i><span itemprop="postalCode">111222</span> г. <span itemprop="addressLocality">Москва</span>, <span itemprop="streetAddress">ул. Ленина, д. 5</span></div></li>
+			<li><i class="fa fa-phone">&nbsp;</i><a href="tel:+7(495)006-00-98"><span itemprop="telephone">+7&nbsp;(495)&nbsp;006-00-98</span></a></li>
+			<li><i class="fa fa-whatsapp">&nbsp;</i><a href="https://wa.me/79030060099"><span>Написать в WhatsApp</span></a></li>
+			<li><i class="fa fa-envelope-o">&nbsp;</i><a href="mailto:info@veshi.pro"><span itemprop="email">info@veshi.pro</span></a></li>
+			<li><div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fa fa-map-marker">&nbsp;</i><span itemprop="postalCode">117105</span> г. <span itemprop="addressLocality">Москва</span>, <span itemprop="streetAddress">Варшавское шоссе, д. 35, стр. 1, БЦ "Ривер плаза"</span></div></li>
 			<li><i class="fa fa-clock-o">&nbsp;</i><data itemprop="openingHours" value="Mo-Fri 10:00−20:00"> Пн-Пт, 10:00-19:00.</data></li>
 		</ul>
 	</div>
