--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
 	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
 	<meta name="application-name" content="Вещи - магазин дизайнерской мебели и аксессуаров"/>
-	<meta name="theme-color" content="#efefee"/>
+	<meta name="theme-color" content="#efefec"/>
 	<meta name="msapplication-TileColor" content="#FFFFFF" />
 	<meta name="msapplication-TileImage" content="/mstile-144x144.png" />
 	<meta property="og:type" content="article" />
