--- a/_layouts/catalog.html
+++ b/_layouts/catalog.html
@@ -29,7 +29,9 @@
 						
 					{% endfor %}
 					</section>
+					<section class="content">
 					{{content}}
+					</section>
 				</div>
 			</article>
 		</div>
