--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -33,7 +33,9 @@
 						
 					{% endfor %}
 					</section>
+					<section class="content">
 					{{content}}
+					</section>
 				</div>
 			</article>
 		</div>
