--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans:300,400&display=swap&subset=cyrillic');
 @import url('https://fonts.googleapis.com/css?family=Alice&display=swap&subset=cyrillic');
 @import url('https://fonts.googleapis.com/css?family=Lora|Noto+Sans|Noto+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Literata:400,500,600,700|Lora:400,700|Noto+Serif:400,700|Podkova:400,600&display=swap&subset=cyrillic');
 
 
 /* Reset */
@@ -75,7 +76,7 @@
 	}
 
 	body {
-		background: #efefee;
+		background: #efefec;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -93,7 +94,7 @@
 
 	body, input, select, textarea {
 		color: #424244;
-		font-family: 'Fira Sans', Arial, sans-serif;
+		font-family: 'Literata', 'Times New Roman', serif;
 		font-size: 16px;
 		font-weight: 400;
 		line-height: 1.65em;
@@ -114,7 +115,7 @@
 		}
 
 	strong, b {
-		font-weight: 400;
+		font-weight: 600;
 	}
 
 	em, i {
@@ -126,7 +127,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-weight: 300;
+		font-weight: 400;
 		line-height: 1.5;
 		margin: 0 0 1em 0;
 	}
@@ -998,7 +999,7 @@
 			bottom: 0;
 			right: 0;
 			padding: 20px;
-			color: #efefee;
+			color: #efefec;
 			transition: all .2s ease-in-out;
 			opacity: 0;
 			background: linear-gradient(180deg, rgba(0,0,0,0.6), transparent 50%);
@@ -1039,25 +1040,28 @@
 				font-size: 80%;
 			}
 		}
-		
+	
+	.content {
+		margin-top: 3em;
+	}
+	
 /* Product */
 
 	.product {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		grid-gap: 2em;
-		font-weight: 300;
 	}
 	
-		.product img {
-			max-height: 90vh;
+		.product > img {
+			max-height: 85vh;
 			max-width: 100%;
 			width: auto !important;
 		}
 		
 		@media screen and (max-width: 980px) {
 			
-			.product img {
+			.product > img {
 				width: 100% !important;
 				max-height: none;
 			}
@@ -1065,7 +1069,7 @@
 		
 		@media screen and (max-width: 480px) {
 			
-			.product img {
+			.product > img {
 				position: relative;
 				width: 100vw !important;
 				left: 50%;
@@ -1170,7 +1174,7 @@
 		
 			#banner .inner h1 {
 				font-size: 4em;
-				color: #efefee;
+				color: #efefec;
 			}
 		
 		@media screen and (max-width: 980px) {
@@ -1229,7 +1233,7 @@
 		header.mobile {
 			position: fixed;
 			top:0;
-			background: #efefee;
+			background: #efefec;
 			height: 4em;
 			line-height: 4em;
 			z-index: 10001;
@@ -1296,7 +1300,7 @@
 		align-items: center;
 		justify-content: space-between;
 		text-align:center;
-		background: #efefee;
+		background: #efefec;
 	}
 		
 		#nav .logo {
@@ -1322,7 +1326,7 @@
 				}
 				
 					#nav  ul.links > li.current {
-						font-weight: 400;
+						font-weight: 600;
 					}
 				
 					#nav  ul.links > li.sub-cat {
@@ -1464,7 +1468,8 @@
 
 		#nav .phone {
 			display: block;
-			margin-bottom: 1em;
+			margin-bottom: 1.5em;
+			font-size:1.25em;
 		}
 
 	
@@ -1513,7 +1518,7 @@
 
 	#footer {
 		padding: 4em 0 2em 0;
-		background: #efefee;
+		background: #efefec;
 		text-align: right;
 		font-size: 0.9em;
 	}
@@ -1568,7 +1573,7 @@
 
 /* Google map */
 	#map {
-		height:500px;
+		height:80vh;
 		width:auto;
 		border-radius: 3px;
 	}
