--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -14,12 +14,27 @@
 		</div>
 		<div id="wrapper">
 			<article>
-				<div class="container">
+			{% assign all_products = site.catalog | where: "type", "product" %}
+				<section class="container">
 					<header class="main-header">
-						<h1>{{page.page-title}}</h1>
+						<h2>Новинки:</h2>
 					</header>
-					{{content}}
-				</div>
+					<div class="items">
+						{% for product in all_products %}
+						
+						<div class="item">
+							<a href="{{product.url}}">
+								<img class="image fit" src="/images/catalog/{{product.url}}-small.jpg" />
+								<div class="caption">
+									<h2>{{product.product-title}}</h2>
+									<p>{{product.product-price}} &#8381;</p>
+								</div>
+							</a>
+						</div>
+						
+					{% endfor %}
+					</div>
+				</section>
 			</article>
 		</div>
 			
