--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -810,7 +810,7 @@
 		text-transform: uppercase;
 		letter-spacing: 0.1em;
 		font-weight: 400;
-			
+		border-radius: 3px;
 	}
 
 		input[type="submit"]:hover,
