--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,7 @@
 @charset "UTF-8";
-@import url(font-awesome.min.css);
 
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:300,400&display=swap&subset=cyrillic');
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans:300,400&display=swap&subset=cyrillic');
 @import url('https://fonts.googleapis.com/css?family=Alice&display=swap&subset=cyrillic');
-@import url('https://fonts.googleapis.com/css?family=Lora|Noto+Sans|Noto+Serif&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Literata:400,500,600,700|Lora:400,700|Noto+Serif:400,700|Podkova:400,600&display=swap&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=Literata:400,600&display=swap&subset=cyrillic');
 
 
 /* Reset */
@@ -98,6 +94,11 @@
 		font-size: 16px;
 		font-weight: 400;
 		line-height: 1.65em;
+	}
+	
+	svg {
+		fill: #424244;
+		vertical-align: middle;
 	}
 
 	a {
