--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,7 +9,7 @@
 		<!-- Main -->
 		<div id="banner">
 			<div class="inner">
-				<h1>Мебель и предметы интерьера с историей</h1>
+				<h1>Мебель и предметы интерьера ручной работы</h1>
 			</div>
 		</div>
 		<div id="wrapper">
@@ -17,7 +17,28 @@
 			{% assign all_products = site.catalog | where: "type", "product" %}
 				<section class="container">
 					<header class="main-header">
-						<h2>Новинки:</h2>
+						<h4>Новинки:</h4>
+					</header>
+					<div class="items">
+						{% for product in all_products %}
+						
+						<div class="item">
+							<a href="{{product.url}}">
+								<img class="image fit" src="/images/catalog/{{product.url}}-small.jpg" />
+								<div class="caption">
+									<h2>{{product.product-title}}</h2>
+									<p>{{product.product-price}} &#8381;</p>
+								</div>
+							</a>
+						</div>
+						
+					{% endfor %}
+					</div>
+				</section>
+				<hr />
+				<section class="container">
+					<header class="main-header">
+						<h4>Популярные:</h4>
 					</header>
 					<div class="items">
 						{% for product in all_products %}
