--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -203,7 +203,7 @@
 
 	hr {
 		border: 0;
-		border-bottom: solid 1px rgba(144, 144, 144, 0.25);
+		/* border-bottom: solid 1px rgba(144, 144, 144, 0.25); */
 		margin: 2em 0;
 	}
 
@@ -1174,9 +1174,13 @@
 		}
 		
 			#banner .inner h1 {
-				font-size: 4em;
+				font-size: 3.5em;
 				color: #efefec;
 			}
+			
+				#banner .inner h1+p {
+					color: #efefec;
+				}
 		
 		@media screen and (max-width: 980px) {
 			
@@ -1329,6 +1333,10 @@
 					#nav  ul.links > li.current {
 						font-weight: 600;
 					}
+					
+						#nav  ul.links > li.current > a::after{
+							left:0;
+						}
 				
 					#nav  ul.links > li.sub-cat {
 						padding-left: 1.5em;
@@ -1352,7 +1360,7 @@
 							position: absolute;
 							content:'';
 							width: 50%;
-							height: 1px;
+							height: 2px;
 							bottom: 0;
 							left: -50%;
 							background: #424244;
@@ -1587,4 +1595,79 @@
 	}
 	.gm-style-iw a {
 		color: #100e11;
+	}
+	
+/* Loader */
+
+	@keyframes overlay-hide {
+		0% {
+			opacity: 1;
+			z-index: 100000;
+		}
+
+		15% {
+			opacity: 1;
+			z-index: 100000;
+		}
+
+		99% {
+			opacity: 0;
+			z-index: 100000;
+		}
+
+		100% {
+			opacity: 0;
+			z-index: -1;
+		}
+	}
+	
+	@keyframes overlay-show {
+		0% {
+			opacity: 0;
+			z-index: -1;
+		}
+
+		15% {
+			opacity: ;
+			z-index: 100000;
+		}
+
+		99% {
+			opacity: 1;
+			z-index: 100000;
+		}
+
+		100% {
+			opacity: 1;
+			z-index: 100000;
+		}
+	}
+	
+	body:after {
+		-webkit-animation: overlay-hide 0.5s ease-in forwards !important;
+		animation: overlay-hide 0.5s ease-in forwards !important;
+		background: #efefec;
+		content: '';
+		display: block;
+		height: 100%;
+		left: 0;
+		opacity: 0;
+		position: fixed;
+		top: 0;
+		width: 100%;
+		z-index: -1;
+	}
+
+	
+	body.is-loading:after {
+		-webkit-animation: none !important;
+		animation: none !important;
+		opacity: 1;
+		z-index: 100000;
+	}
+	
+	body.trans:after {
+		animation: overlay-show 0.25s ease-in forwards !important;
+		opacity: 1;
+		z-index: 1000000;
 	}
