--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,17 +7,23 @@
 		<!-- Nav -->
 		{% include nav.html %}
 		<!-- Main -->
-		<div id="banner">
-			<div class="inner">
-				<h1>Мебель и предметы интерьера ручной работы</h1>
-			</div>
-		</div>
+		<!-- <div id="banner"> -->
+			<!-- <div class="inner"> -->
+				<!-- <h1>Мебель и предметы интерьера ручной работы</h1> -->
+			<!-- </div> -->
+		<!-- </div> -->
 		<div id="wrapper">
 			<article>
 			{% assign all_products = site.catalog | where: "type", "product" %}
 				<section class="container">
 					<header class="main-header">
-						<h4>Новинки:</h4>
+						<h1>Магазин дизайнерских предметов интерьера и мебели ручной работы</h1>
+					</header>
+					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
+				</section>
+				<section class="container">
+					<header>
+						<h2>Новинки:</h2>
 					</header>
 					<div class="items">
 						{% for product in all_products %}
@@ -37,8 +43,8 @@
 				</section>
 				<hr />
 				<section class="container">
-					<header class="main-header">
-						<h4>Популярные:</h4>
+					<header>
+						<h2>Популярные:</h2>
 					</header>
 					<div class="items">
 						{% for product in all_products %}
