--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css?family=Alice&display=swap&subset=cyrillic');
-@import url('https://fonts.googleapis.com/css?family=Literata:400,600&display=swap&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=Literata:400,500,600,700&display=swap&subset=cyrillic');
 
 
 /* Reset */
@@ -128,7 +128,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-weight: 400;
+		font-weight: 500;
 		line-height: 1.5;
 		margin: 0 0 1em 0;
 	}
@@ -1500,15 +1500,8 @@
 /* Main */
 
 	.main-header {
-		font-size: 200%;
-		line-height: 3em;
-		margin-bottom: 1em;
+		font-size: 2em;
 	}
-	
-		.main-header h1{
-			font-weight: 300;
-			margin: 0;
-		}
 	
 	@media screen and (max-width: 980px) {
 			
