--- a/_layouts/generic.html
+++ b/_layouts/generic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="ru">
 	{% include head.html %}
-	<body>
+	<body class="is-loading">
 		<!-- Header -->
 		{% include header.html %}
 		<!-- Nav -->
