--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -44,9 +44,9 @@
 					
 					</div>
 				</section>
+				<hr />
 				{% endif %}
 				{% if featured_products[0] %}
-				<hr />
 				<section class="container">
 					<header>
 						<h2>Популярные:</h2>
@@ -67,7 +67,11 @@
 					{% endfor %}
 					</div>
 				</section>
+				<hr />
 				{% endif %}
+				<section class="container">
+					<a href="#">Смотреть все товары</a>
+				</section>
 			</article>
 		</div>
 			
