--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -22,6 +22,71 @@
 					</header>
 					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
 				</section>
+				<section class="container">
+					<div class="items">
+						<div class="item big">
+							<a href="{{product.url}}">
+								<img class="image fit" src="/images/169.jpg" />
+								<div class="caption">
+									<h2>Текстиль</h2>
+									<p>Смотреть все товары</p>
+								</div>
+							</a>
+						</div>
+						<div class="item">
+							<a href="{{product.url}}">
+								<img class="image fit" src="/images/54-1.jpg" />
+								<div class="caption">
+									<h2>Керамика</h2>
+								</div>
+							</a>
+						</div>
+						<div class="item">
+							<a href="{{product.url}}">
+								<img class="image fit" src="/images/54-2.jpg" />
+								<div class="caption">
+									<h2>Керамика</h2>
+								</div>
+							</a>
+						</div>
+						<div class="item big">
+							<a href="{{product.url}}">
+								<img class="image fit" src="/images/169-2.jpg" />
+								<div class="caption down-left">
+									<h2>Керамика</h2>
+									<p>Смотреть все товары</p>
+								</div>
+							</a>
+						</div>
+						<div class="item big">
+							<a href="{{product.url}}">
+								<img class="image fit" src="/images/169-3.jpg" />
+							</a>
+						</div>
+						<div class="item">
+							<a href="{{product.url}}">
+								<img class="image fit" src="/images/54-1.jpg" />
+								<div class="caption">
+									<h2>Керамика</h2>
+								</div>
+							</a>
+						</div>
+						<div class="item">
+							<a href="{{product.url}}">
+								<img class="image fit" src="/images/54-2.jpg" />
+								<div class="caption">
+									<h2>Керамика</h2>
+								</div>
+							</a>
+						</div>
+						<div class="item big">
+							<a href="{{product.url}}">
+								<img class="image fit" src="/images/169.jpg" />
+							</a>
+						</div>
+					</div>
+				</section>
+				<hr />
 				{% if new_products[0] %}
 				<section class="container">
 					<header>
