--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -61,6 +61,10 @@
 						<div class="item big">
 							<a href="{{product.url}}">
 								<img class="image fit" src="/images/169-3.jpg" />
+								<div class="caption">
+									<h2>Шоу-рум</h2>
+									<p>Приходите, можно всё потрогать</p>
+								</div>
 							</a>
 						</div>
 						<div class="item">
