--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1338,7 +1338,7 @@
 		align-items: center;
 		justify-content: space-between;
 		text-align:center;
-		/* background: #efefec; */
+		background: #efefec;
 	}
 		
 		#nav .logo {
