--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -17,7 +17,7 @@
 			{% assign new_products = site.catalog | where: "type", "product" | where: "new", "1" | sort: "weight" %}
 			{% assign featured_products = site.catalog | where: "type", "product" | where: "featured", "1" | sort: "weight" %}
 				<section class="container">
-					<header class="main-header">
+					<header class="main-header index">
 						<h1>Интерьер ручной работы</h1>
 					</header>
 					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
