--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -6,6 +6,8 @@
 		{% include header.html %}
 		<!-- Nav -->
 		{% include nav.html %}
+		<!-- Cart -->
+		{% include cart.html %}
 		<!-- Main -->
 		
 		{% assign img_array = "" | split:"," %}
@@ -37,7 +39,7 @@
 							<h2 class="align-center">{{page.product-price}} &#8381;</h2>
 							<footer>
 								<ul class="actions align-center">
-									<li><a id="btn-order" href="#" class="button special big modal-open" data-modal="modal-order">Купить</a></li>
+									<li><a href="#" class="button special big add-to-cart" data-name="{{page.product-title}}" data-price="{{page.product-price | remove: ' '}}" data-url="{{page.url}}">В корзину</a></li>
 								</ul>
 							</footer>
 						</div>
