--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,2 +1,3 @@
 <script src="/assets/js/jquery.min.js"></script>
 <script src="/assets/js/main.js"></script>
+<script src="/assets/js/minicart.js"></script>
