--- a/_layouts/catalog.html
+++ b/_layouts/catalog.html
@@ -6,6 +6,7 @@
 		{% include header.html %}
 		<!-- Nav -->
 		{% include nav.html %}
+		{% include cart.html %}
 		{% assign all_products = site.catalog | where: "type", "product" %}
 		<!-- Main -->
 		<div id="wrapper">
