--- a/_layouts/generic.html
+++ b/_layouts/generic.html
@@ -6,6 +6,7 @@
 		{% include header.html %}
 		<!-- Nav -->
 		{% include nav.html %}
+		{% include cart.html %}
 		<!-- Main -->
 		<div id="wrapper">
 			<article>
