--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -203,12 +203,15 @@
 
 	hr {
 		border: 0;
-		/* border-bottom: solid 1px rgba(144, 144, 144, 0.25); */
 		margin: 2em 0;
 	}
 
 		hr.major {
 			margin: 3em 0;
+		}
+
+		hr.alt {
+			border-bottom: solid 1px rgba(144, 144, 144, 0.25);
 		}
 
 	.align-left {
@@ -801,17 +804,17 @@
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		cursor: pointer;
 		display: inline-block;
-		height: 2.85em;
+		/* height: 2.85em; */
 		line-height: 2.95em;
 		padding: 0 1.5em;
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
 		color: #3e3e3e;
-		text-transform: uppercase;
-		letter-spacing: 0.1em;
+		/* text-transform: uppercase; */
+		letter-spacing: 0.05em;
 		font-weight: 400;
-		border-radius: 3px;
+		border-radius: 5px;
 	}
 
 		input[type="submit"]:hover,
@@ -967,7 +970,7 @@
 		display: grid;
 		/* grid: auto-flow / repeat(auto-fill, minmax(320px, 1fr)); */
 		grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-		grid-gap: 10px;
+		grid-gap: 20px;
 		grid-auto-flow: dense;
 	}
 	
@@ -977,6 +980,8 @@
 				grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
 			}
 		}
+
+		
 		
 	.item {
 		position: relative;
@@ -995,7 +1000,8 @@
 					grid-column-start: span 1;
 				}
 			}
-	
+
+				
 		.item > a img{
 			transition: all .2s ease-in-out;
 		}
@@ -1094,6 +1100,10 @@
 			max-height: 85vh;
 			max-width: 100%;
 			width: auto !important;
+		}
+
+		.product ul li {
+			line-height: 2em;
 		}
 		
 		@media screen and (max-width: 980px) {
@@ -1279,6 +1289,7 @@
 			justify-content: space-around;
 			padding:0 5%;
 			width: 100% !important;
+			transition: all 0.3s;
 		}
 		
 				header.mobile > a {
@@ -1311,6 +1322,116 @@
 			font-size: 1.5em;
 		}
 		
+	}
+
+/* Shopping cart */
+
+.cart-inner {
+	width: 100%;
+	padding: 0 2em;
+	overflow-y: auto;
+}
+
+	.cart-item {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		min-height: 20vh;
+		padding-bottom: 2em;
+	}
+
+		.cart-item img {
+			height: 20vh;
+			width: auto;
+		}
+
+	.cart-text {
+		width: 100%;
+		padding-left: 2em;
+	}
+
+.cart.float {
+	position: fixed;
+	line-height: 4em;
+	font-size: 1.5em;
+	top: 0;
+	right: 3%;
+	z-index: 10002;
+}
+
+@media screen and (max-width: 980px) {
+	
+	.cart.float {
+		display: none;
+	}
+
+}
+
+#cart {
+	transition: transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s, -webkit-transform 0.5s ease;
+	box-shadow: none;
+	height: 100%;
+	min-width: 50%;
+	max-width: 90%;
+	overflow-y: hidden;
+	position: fixed;
+	right: 0;
+	top: 0;
+	bottom:0;
+	
+	z-index: 10003;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	text-align:center;
+	background: #efefec;
+	padding-top: 1.75em;
+	transform: translateX(100%);
+}
+
+	#cart.visible {
+		transform: translateX(0);
+		box-shadow: 0 0 1.5em 0 rgba(0, 0, 0, 0.2);
+		visibility: visible;
+	}
+
+	#cart .close {
+		display: block;
+		height: 4em;
+		line-height: 4em;
+		text-decoration: none;
+		-webkit-tap-highlight-color: transparent;
+		-webkit-transition: opacity .3s;
+		transition: opacity .3s;
+		border: 0;
+		color: #3e3e3e;
+		cursor: pointer;
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 5em;
+		outline: 0;
+	}
+
+	@media screen and (max-width: 480px) {
+
+		#cart {
+			/* padding-top: 3em; */
+			width: 85%;
+		}
+
+		.cart-text {
+			padding-left: 1em;
+		}
+
+		.cart-inner {
+			padding: 0 1em;
+		}
+
+		#cart .button {
+			padding: 0 1em;
+		}
 	}
 
 /* Nav */
@@ -1444,13 +1565,13 @@
 			display: none;
 			height: 3em;
 			position: absolute;
-			right: 0;
-			top: 1.5em;
+			left: 0;
+			top: 0;
 			width: 5em;
 			outline: 0;
 		}
 		
-			#nav .close:before, .close:after {
+			/* #nav .close:before, #nav .close:after {
 				content: '';
 				background-color: #3e3e3e;
 				height: 2px;
@@ -1476,7 +1597,7 @@
 				-webkit-transform: rotate(-45deg);
 				    -ms-transform: rotate(-45deg);
 				        transform: rotate(-45deg);
-			}
+			} */
 
 			@media screen and (max-width: 980px) {
 
@@ -1484,12 +1605,13 @@
 					-webkit-transform: translateX(-25em);
 					-ms-transform: translateX(-25em);
 					transform: translateX(-25em);
-					padding-top: 6em;
+					padding-top: 4em;
 				}
 				
 				#nav .close {
 					display: block;
 					height: 4em;
+					line-height: 4em;
 				}
 				
 				/* #nav .logo { */
@@ -1505,10 +1627,6 @@
 					padding-top: 2em;
 				}
 				
-					#nav .close {
-						top: 0;
-					}
-					
 					#nav .logo {
 						font-size: 200%;
 					}
@@ -1528,8 +1646,7 @@
 			font-size:1.25em;
 		}
 
-	
-	
+
 
 /* Containers */
 
@@ -1675,7 +1792,7 @@
 		}
 
 		15% {
-			opacity: ;
+			opacity: 1;
 			z-index: 100000;
 		}
 
@@ -1714,7 +1831,7 @@
 	}
 	
 	body.trans:after {
-		animation: overlay-show 0.25s ease-in forwards !important;
+		animation: overlay-show 1.25s ease-in forwards !important;
 		opacity: 1;
 		z-index: 1000000;
 	}
