--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -87,7 +87,7 @@
 						</div>
 					</div>
 				</section>
-				<hr />
+				<hr class="major"/>
 				{% if new_products[0] %}
 				<section class="container">
 					<header>
@@ -110,7 +110,7 @@
 					
 					</div>
 				</section>
-				<hr />
+				<hr class="major"/>
 				{% endif %}
 				{% if featured_products[0] %}
 				<section class="container">
@@ -133,7 +133,7 @@
 					{% endfor %}
 					</div>
 				</section>
-				<hr />
+				<hr class="major"/>
 				{% endif %}
 				<section class="container">
 					<a href="#">Смотреть все товары</a>
