--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,6 +104,7 @@
 		color: #424244;
 		text-decoration: none;
 		transition: opacity 0.2s ease-in-out;
+		-webkit-tap-highlight-color: transparent;
 	}
 
 		a:hover {
@@ -203,11 +204,11 @@
 
 	hr {
 		border: 0;
-		margin: 2em 0;
+		margin: 1em 0;
 	}
 
 		hr.major {
-			margin: 3em 0;
+			margin: 2em 0;
 		}
 
 		hr.alt {
@@ -1335,10 +1336,34 @@
 	.cart-item {
 		display: flex;
 		flex-direction: row;
-		justify-content: space-between;
+		justify-content: flex-start;
 		min-height: 20vh;
-		padding-bottom: 2em;
+		padding-bottom: 1em;
+		border-bottom: solid 1px rgba(144, 144, 144, 0.25);
+		margin-bottom: 1em;
 	}
+
+		.cart-item:last-child {
+			border: 0;
+			margin-bottom: 0;
+		}
+
+		.cart-item h3 {
+			font-weight: 600;
+			font-size: 1em;
+		}
+
+		.cart-item .button:active {
+			background-color: rgba(0,0,0,0.1);
+		}
+
+		.cart-item span {
+			padding: 0 1em;
+		}
+
+		.cart-text div {
+			margin-bottom: 1em;
+		}
 
 		.cart-item img {
 			height: 20vh;
@@ -1346,8 +1371,8 @@
 		}
 
 	.cart-text {
-		width: 100%;
 		padding-left: 2em;
+		text-align: left;
 	}
 
 .cart.float {
@@ -1412,6 +1437,10 @@
 		top: 0;
 		width: 5em;
 		outline: 0;
+	}
+
+	#cart h2 {
+		margin-bottom: 1rem;
 	}
 
 	@media screen and (max-width: 480px) {
