--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -48,7 +48,7 @@
 						</div>
 						<div class="item big">
 							<a href="{{product.url}}">
-								<img class="image fit" src="/images/169-2.jpg" />
+								<img class="image fit" src="/images/keramika-main.jpg" />
 								<div class="caption down-left">
 									<h2>Керамика</h2>
 									<p>Смотреть все товары</p>
