--- a/_includes/cart.html
+++ b/_includes/cart.html
@@ -36,7 +36,7 @@
             <input type="email" class="email" name="email" placeholder="E-mail*" required>
             <textarea rows="4" name="message" class="message" placeholder="Комментарий"></textarea>
             <input style="display:none" type="email" name="mail_to" value="info@veshi.shop">
-            <input style="display:none" class="cart-string" type="text" name="cartString" value="">
+            <input style="display:none" class="cart-string" type="text" name="cartstring" value="">
             <ul class="actions">
                 <li><input type="submit" class="button special big" value="Отправить"></li>
             </ul>
