--- a/_includes/cart.html
+++ b/_includes/cart.html
@@ -25,7 +25,7 @@
             <hr class="alt" />
             <h3>Итого: <span class="total-cart"></span> &#8381;</h3>
             <ul class="actions">
-                <li><a href="#" class="button special big order">Оформить заказ</a></li>
+                <li><a href="#" class="button special big disabled order">Оформить заказ</a></li>
             </ul>
         </footer>
     </div>
