--- a/_includes/cart.html
+++ b/_includes/cart.html
@@ -37,8 +37,9 @@
             <textarea rows="4" name="message" class="message" placeholder="Комментарий"></textarea>
             <input style="display:none" type="email" name="mail_to" value="info@veshi.shop">
             <input style="display:none" class="cart-string" type="text" name="cartstring" value="">
-            <ul class="actions">
+            <ul class="actions vertical">
                 <li><input type="submit" class="button special big" value="Отправить"></li>
+                <li><a href="#" class="return-to-cart">Вернуться в корзину</a></li>
             </ul>
         </form>
         <div class="form-loading align-center" style="display:none;">
