--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -47,9 +47,9 @@
 							</a>
 						</div>
 						<div class="item big">
-							<a href="{{product.url}}">
+							<a href="/keramika/">
 								<img class="image fit" src="/images/keramika-main.jpg" />
-								<div class="caption down-left">
+								<div class="caption">
 									<h2>Керамика</h2>
 									<p>Смотреть все товары</p>
 								</div>
@@ -58,7 +58,7 @@
 						<div class="item big">
 							<a href="{{product.url}}">
 								<img class="image fit" src="/images/169-3.jpg" />
-								<div class="caption">
+								<div class="caption down-left">
 									<h2>Шоу-рум</h2>
 									<p>Приходите, можно всё потрогать</p>
 								</div>
