--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -39,7 +39,9 @@
 							<h2 class="align-center">{{page.product-price}} &#8381;</h2>
 							<footer>
 								<ul class="actions align-center">
-									<li><a href="#" class="button special big add-to-cart" data-name="{{page.product-title}}" data-price="{{page.product-price | remove: ' '}}" data-url="{{page.url}}">В корзину</a></li>
+									<li>
+										<a href="#" class="button special big add-to-cart" data-name="{{page.product-title}}" data-price="{{page.product-price | remove: ' '}}" data-url="{{page.url}}">В корзину</a>
+									</li>
 								</ul>
 							</footer>
 						</div>
