--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,8 @@
 		<li class="sub-cat {% if page.url contains '/svet/' %}current{% endif %}"><a href="/svet/">Свет</a></li>
 		<li class="sub-cat {% if page.url contains '/mebel/' %}current{% endif %}"><a href="/mebel/">Мебель</a></li>
 		<!-- <li class="gap {% if page.url contains "/stories/" %}current{% endif %}"><a href="/stories/">Истории</a></li> -->
-		<li class="gap{%if page.url contains '/dostavka' %} current{% endif %}"><a href="/dostavka">Доставка</a></li>
+		<li class="gap{%if page.url contains '/oplata' %} current{% endif %}"><a href="/oplata">Оплата</a></li>
+		<li class="{%if page.url contains '/dostavka' %} current{% endif %}"><a href="/dostavka">Доставка</a></li>
 		<li{% if page.url contains "/contact" %} class="current"{% endif %}><a href="/contact">Контакты</a></li>
 	</ul>
 	<div>
