--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -32,7 +32,7 @@
 							{% if page.features %}
 							<ul>
 								{% for feature in page.features %}
-								<li><b>{{feature.name}}</b> {{feature.value}}</li>
+								<li>{{feature}}</li>
 								{% endfor %}
 							</ul>
 							{% endif %}
