--- a/_includes/cart.html
+++ b/_includes/cart.html
@@ -49,10 +49,12 @@
         <div class="form-succes align-center" style="display:none;">
             <h3>Спасибо!</h3>
             <p>Мы свяжемся с вами в самое ближайшее время!</p>
+            <a href="#" class="return-to-cart">Вернуться в корзину</a>
         </div>
         <div class="form-error align-center" style="display:none;">
             <h3>Ой!</h3>
             <p>Что-то пошло не так. Попробуйте отправить заказ чуть позже или просто позвоните нам.</p>
+            <a href="#" class="return-to-cart">Вернуться в корзину</a>
         </div>
     </div>
 </aside>
